Bug 649666 Do not create container layers for scrollboxes with (0, 0) scrollRange r=roc